--- a/.github/workflows/iac-cd-ecommerce-cloud.yml
+++ b/.github/workflows/iac-cd-ecommerce-cloud.yml
@@ -3,7 +3,7 @@ name: IaC CD Ecommerce Cloud
 on:
   push:
     branches:
-      - 'tmp'
+      - 'master'
     paths:
       - Iac/xpipe-cloud/xpipe-ecommerce/**/*.*
       - .github/workflows/iac-cd-ecommerce-cloud.yml
@@ -15,7 +15,6 @@ defaults:
 jobs:
   deploy:
     name: Deploy
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,44 +31,41 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
-          args: apply -f IaC/xpipe-cloud/namespace.yaml
+          args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/namespace.yaml
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
-          args: apply -f k8s/resources/cloud/namespace.yaml
+          args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/db.yaml
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
-          args: apply -f k8s/resources/cloud/db.yaml
+          args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/idx.yaml
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
-          args: apply -f k8s/resources/cloud/idx.yaml
+          args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/configmap.yaml
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
-          args: apply -f k8s/resources/cloud/configmap.yaml
+          args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/service.yaml
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
-          args: apply -f k8s/resources/cloud/service.yaml
-      - uses: actions-hub/kubectl@master
-        env:
-          KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
-        with:
-          args: apply -f k8s/resources/cloud/service.yaml
+          args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/service.yaml
       - name: SemVer
-        run: sed -i -E "s|@@RELEASE_VERSION@@|${RELEASE_VERSION}|g" k8s/resources/cloud/deployment.yaml
+        run: sed -i -E "s|@@RELEASE_VERSION@@|${RELEASE_VERSION}|g" IaC/xpipe-cloud/xpipe-ecommerce/deployment.yaml
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
         with:
-          args: apply -f k8s/resources/cloud/deployment.yaml
+          args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/deployment.yaml
+      - name: Wait
+        run: sleep 30
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
