--- a/.github/workflows/iac-cd-ecommerce-cloud.yml
+++ b/.github/workflows/iac-cd-ecommerce-cloud.yml
@@ -3,7 +3,7 @@ name: IaC CD Ecommerce Cloud
 on:
   push:
     branches:
-      - 'tmp'
+      - 'master'
     paths:
       - Iac/xpipe-cloud/xpipe-ecommerce/**/*.*
       - .github/workflows/iac-cd-ecommerce-cloud.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           args: apply -f IaC/xpipe-cloud/xpipe-ecommerce/deployment.yaml
       - name: Wait
-        run: sleep 30
+        run: sleep 45
       - uses: actions-hub/kubectl@master
         env:
           KUBE_CONFIG: ${{ secrets.WOPR_KUBECONFIG }}
