--- a/.github/workflows/core-ci-ecommerce-void.yml
+++ b/.github/workflows/core-ci-ecommerce-void.yml
@@ -13,6 +13,18 @@ defaults:
     working-directory: Core/xpipe-ecommerce
 
 jobs:
+  validate:
+    name: Validate
+    runs-on: ubuntu-latest
+    container: sindriainc/pipeline-az-devops:latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set env release
+        run: cat VERSION.env >> $GITHUB_ENV
+      - name: Set env slug
+        run: cat REPO.env >> $GITHUB_ENV
+      - name: Validate Release
+        run: sudo docker run --rm -t --env REPO_SLUG=${REPO_SLUG} --env RELEASE_VERSION=${RELEASE_VERSION} sindriainc/xpipe-no-validate-release:1.0.0
   build:
     name: Build
     runs-on: ubuntu-latest
