--- a/.github/workflows/job-no-certs-route53.yml
+++ b/.github/workflows/job-no-certs-route53.yml
@@ -2,15 +2,14 @@ name: Job noOps Certs Route53
 
 on:
   workflow_call:
+    secrets:
+      _AWS_ACCESS_KEY_ID:
+        description: awscli
+        required: true
+      _AWS_SECRET_ACCESS_KEY:
+        description: awscli
+        required: true
     inputs:
-      AWS_ACCESS_KEY_ID:
-        description: awscli
-        required: true
-        type: string
-      AWS_SECRET_ACCESS_KEY:
-        description: awscli
-        required: true
-        type: string
       AWS_DEFAULT_REGION:
         description: awscli
         required: true
@@ -37,8 +36,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Certs
         env:
-          AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets._AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets._AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ inputs.AWS_DEFAULT_REGION }}
           CRT_CERTBOT_CACHE: ${{ inputs.CRT_CERTBOT_CACHE }}
           CRT_CERTBOT_EMAIL: ${{ inputs.CRT_CERTBOT_EMAIL }}
