--- a/.github/workflows/job-no-certs-route53.yml
+++ b/.github/workflows/job-no-certs-route53.yml
@@ -43,5 +43,11 @@ jobs:
           CRT_CERTBOT_EMAIL: ${{ inputs.CRT_CERTBOT_EMAIL }}
           CRT_CERTBOT_DOMAIN: ${{ inputs.CRT_CERTBOT_DOMAIN }}
         run: |
+          echo ${AWS_ACCESS_KEY_ID}
+          echo ${AWS_SECRET_ACCESS_KEY}
+          echo ${AWS_DEFAULT_REGION}
+          echo ${CRT_CERTBOT_CACHE}
+          echo ${CRT_CERTBOT_EMAIL}
+          echo ${CRT_CERTBOT_DOMAIN}
           sudo docker run --rm -t --env IAC_MODE=${IAC_MODE} --env AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --env AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --env AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION} --env IAC_CERTBOT_CACHE=${CRT_CERTBOT_CACHE} --env IAC_CERTBOT_EMAIL=${CRT_CERTBOT_EMAIL} --env IAC_CERTBOT_DOMAIN=${CRT_CERTBOT_DOMAIN} sindriainc/xpipe-no-certs-route53:2.0.0
           cowsay -f pikachu "Build Success"
