--- a/.github/workflows/job-no-validate-global.yml
+++ b/.github/workflows/job-no-validate-global.yml
@@ -1,7 +1,20 @@
-name: Validate Job
+name: Job noOps Validate Global
 
 on:
   workflow_call:
+    inputs:
+      CONTAINER_STAGING_CODE_PATH:
+        description: common
+        required: true
+        type: string
+      REPO_SLUG:
+        description: common
+        required: true
+        type: string
+      RELEASE_VERSION:
+        description: common
+        required: true
+        type: string
 
 jobs:
   validate:
@@ -10,9 +23,32 @@ jobs:
     container: sindriainc/pipeline-az-devops:latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set env release
-        run: cat VERSION.env >> $GITHUB_ENV
-      - name: Set env slug
-        run: cat REPO.env >> $GITHUB_ENV
+      - name: Make Job Cache
+        env:
+          CONTAINER_STAGING_CODE_PATH: ${{ inputs.CONTAINER_STAGING_CODE_PATH }}
+          REPO_SLUG: ${{ inputs.REPO_SLUG }}
+          RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
+        run: |
+          ls -la ${CONTAINER_STAGING_CODE_PATH}
+          if [ -d ${CONTAINER_STAGING_CODE_PATH}/${REPO_SLUG}-${RELEASE_VERSION} ]; then sudo rm -Rf ${CONTAINER_STAGING_CODE_PATH}/${REPO_SLUG}-${RELEASE_VERSION}; fi
+          sudo mkdir -p ${CONTAINER_STAGING_CODE_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
+          sudo chmod 777 ${CONTAINER_STAGING_CODE_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
+          ls -la ${CONTAINER_STAGING_CODE_PATH}
       - name: Validate Release
-        run: sudo docker run --rm -t --env REPO_SLUG=${REPO_SLUG} --env RELEASE_VERSION=${RELEASE_VERSION} sindriainc/xpipe-no-validate-release:1.0.0
+        env:
+          REPO_SLUG: ${{ inputs.REPO_SLUG }}
+          RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
+        run: |
+          echo ${CONTAINER_STAGING_CODE_PATH}
+          echo ${REPO_SLUG}
+          echo ${RELEASE_VERSION}
+          sudo docker run --rm -t --env REPO_SLUG=${REPO_SLUG} --env RELEASE_VERSION=${RELEASE_VERSION} sindriainc/xpipe-no-validate-release:1.0.0
+      - name: Purge Job Cache
+        env:
+          CONTAINER_STAGING_CODE_PATH: ${{ inputs.CONTAINER_STAGING_CODE_PATH }}
+          REPO_SLUG: ${{ inputs.REPO_SLUG }}
+          RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
+        run: |
+          ls -la ${CONTAINER_STAGING_CODE_PATH}
+          sudo rm -Rf ${CONTAINER_STAGING_CODE_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
+          ls -la ${CONTAINER_STAGING_CODE_PATH}
