--- a/.github/workflows/job-no-validate-global.yml
+++ b/.github/workflows/job-no-validate-global.yml
@@ -20,14 +20,17 @@ jobs:
   validate:
     name: Validate
     runs-on: ubuntu-latest
-    container: sindriainc/pipeline-az-devops:latest
+    container:
+      image: sindriainc/pipeline-az-devops:latest
+      env:
+        COMMON_CONTAINER_STAGING_PATH: ${{ inputs.COMMON_CONTAINER_STAGING_PATH }}
+        REPO_SLUG: ${{ inputs.REPO_SLUG }}
+        RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
+      volumes:
+        - /staging:/staging
     steps:
       - uses: actions/checkout@v3
       - name: Make Job Cache
-        env:
-          COMMON_CONTAINER_STAGING_PATH: ${{ inputs.COMMON_CONTAINER_STAGING_PATH }}
-          REPO_SLUG: ${{ inputs.REPO_SLUG }}
-          RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
         run: |
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
           if [ -d ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION} ]; then sudo rm -Rf ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}; fi
@@ -35,19 +38,12 @@ jobs:
           sudo chmod 777 ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
       - name: Validate Release
-        env:
-          REPO_SLUG: ${{ inputs.REPO_SLUG }}
-          RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
         run: |
           echo ${COMMON_CONTAINER_STAGING_PATH}
           echo ${REPO_SLUG}
           echo ${RELEASE_VERSION}
           sudo docker run --rm -t --env REPO_SLUG=${REPO_SLUG} --env RELEASE_VERSION=${RELEASE_VERSION} sindriainc/xpipe-no-validate-release:1.0.0
       - name: Purge Job Cache
-        env:
-          COMMON_CONTAINER_STAGING_PATH: ${{ inputs.COMMON_CONTAINER_STAGING_PATH }}
-          REPO_SLUG: ${{ inputs.REPO_SLUG }}
-          RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
         run: |
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
           sudo rm -Rf ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
