--- a/.github/workflows/job-ci-buildamd64-global.yml
+++ b/.github/workflows/job-ci-buildamd64-global.yml
@@ -1,7 +1,14 @@
-name: Job noOps Validate Global
+name: Job CI BuildAmd64 Global
 
 on:
   workflow_call:
+    secrets:
+      _DOCKERHUB_USERNAME:
+        description: dockerhub
+        required: true
+      _DOCKERHUB_PASSWORD:
+        description: dockerhub
+        required: true
     inputs:
       COMMON_CONTAINER_STAGING_PATH:
         description: common
@@ -15,10 +22,18 @@ on:
         description: common
         required: true
         type: string
+      DOCKERHUB_PRIVATE_NAMESPACE:
+        description: dockerhub
+        required: true
+        type: string
+      DOCKERHUB_NAMESPACE:
+        description: dockerhub
+        required: true
+        type: string
 
 jobs:
-  validate:
-    name: Validate
+  build_amd64:
+    name: Build Amd64
     runs-on: ubuntu-latest
     container:
       image: sindriainc/pipeline-az-devops:latest
@@ -26,6 +41,10 @@ jobs:
         COMMON_CONTAINER_STAGING_PATH: ${{ inputs.COMMON_CONTAINER_STAGING_PATH }}
         REPO_SLUG: ${{ inputs.REPO_SLUG }}
         RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
+        DOCKERHUB_PRIVATE_NAMESPACE: ${{ inputs.DOCKERHUB_PRIVATE_NAMESPACE }}
+        DOCKERHUB_NAMESPACE: ${{ inputs.DOCKERHUB_NAMESPACE }}
+        DOCKERHUB_USERNAME: ${{ secrets._DOCKERHUB_USERNAME }}
+        DOCKERHUB_PASSWORD: ${{ secrets._DOCKERHUB_PASSWORD }}
       volumes:
         - /staging:/staging
     steps:
@@ -37,23 +56,20 @@ jobs:
           sudo mkdir -p ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           sudo chmod 777 ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
-      - name: Validate Release
+      - uses: docker/setup-qemu-action@v2
+      - name: Login into registry
+        run: echo ${DOCKERHUB_PASSWORD} | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
+      - name: Build
         run: |
-          echo ${COMMON_CONTAINER_STAGING_PATH}
-          echo ${REPO_SLUG}
-          echo ${RELEASE_VERSION}
-          sudo docker run --rm -t --env REPO_SLUG=${REPO_SLUG} --env RELEASE_VERSION=${RELEASE_VERSION} -v ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}:${COMMON_CONTAINER_STAGING_PATH} sindriainc/xpipe-no-validate-release:1.0.0
-          ls -la ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
-          if [ -e ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}/pipeline.lock ]; then exit 1; fi
-          mkdir -p dist_validated
-          cp ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}/match.log dist_validated
-          cp ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}/tag.txt dist_validated
-          cp ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}/release.txt dist_validated
-          cp ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}/branch.txt dist_validated
+          bash build_amd64.sh ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG} ${RELEASE_VERSION}
+          docker save ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-amd64 --output "${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar"
+          mkdir -p dist
+          cp ${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar dist
+          cowsay -f tux "Build Success"
       - uses: actions/upload-artifact@v3
         with:
-          name: dist_validated
-          path: dist_validated
+          name: dist
+          path: dist
       - name: Purge Job Cache
         run: |
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
