--- a/.github/workflows/job-ci-buildamd64-global.yml
+++ b/.github/workflows/job-ci-buildamd64-global.yml
@@ -35,26 +35,18 @@ jobs:
   build_amd64:
     name: Build Amd64
     runs-on: ubuntu-latest
-    env:
-      COMMON_CONTAINER_STAGING_PATH: ${{ inputs.COMMON_CONTAINER_STAGING_PATH }}
-      REPO_SLUG: ${{ inputs.REPO_SLUG }}
-      RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
-      DOCKERHUB_PRIVATE_NAMESPACE: ${{ inputs.DOCKERHUB_PRIVATE_NAMESPACE }}
-      DOCKERHUB_NAMESPACE: ${{ inputs.DOCKERHUB_NAMESPACE }}
-      DOCKERHUB_USERNAME: ${{ secrets._DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets._DOCKERHUB_PASSWORD }}
-#    container:
-#      image: sindriainc/pipeline-az-devops:latest
-#      env:
-#        COMMON_CONTAINER_STAGING_PATH: ${{ inputs.COMMON_CONTAINER_STAGING_PATH }}
-#        REPO_SLUG: ${{ inputs.REPO_SLUG }}
-#        RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
-#        DOCKERHUB_PRIVATE_NAMESPACE: ${{ inputs.DOCKERHUB_PRIVATE_NAMESPACE }}
-#        DOCKERHUB_NAMESPACE: ${{ inputs.DOCKERHUB_NAMESPACE }}
-#        DOCKERHUB_USERNAME: ${{ secrets._DOCKERHUB_USERNAME }}
-#        DOCKERHUB_PASSWORD: ${{ secrets._DOCKERHUB_PASSWORD }}
-#      volumes:
-#        - /staging:/staging
+    container:
+      image: sindriainc/pipeline-az-devops:latest
+      env:
+        COMMON_CONTAINER_STAGING_PATH: ${{ inputs.COMMON_CONTAINER_STAGING_PATH }}
+        REPO_SLUG: ${{ inputs.REPO_SLUG }}
+        RELEASE_VERSION: ${{ inputs.RELEASE_VERSION }}
+        DOCKERHUB_PRIVATE_NAMESPACE: ${{ inputs.DOCKERHUB_PRIVATE_NAMESPACE }}
+        DOCKERHUB_NAMESPACE: ${{ inputs.DOCKERHUB_NAMESPACE }}
+        DOCKERHUB_USERNAME: ${{ secrets._DOCKERHUB_USERNAME }}
+        DOCKERHUB_PASSWORD: ${{ secrets._DOCKERHUB_PASSWORD }}
+      volumes:
+        - /staging:/staging
     steps:
       - uses: actions/checkout@v3
       - name: Make Job Cache
@@ -64,20 +56,20 @@ jobs:
           sudo mkdir -p ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           sudo chmod 777 ${COMMON_CONTAINER_STAGING_PATH}/${REPO_SLUG}-${RELEASE_VERSION}
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
-      - uses: docker/setup-qemu-action@v2
+      #- uses: docker/setup-qemu-action@v2
       - name: Login into registry
         run: echo ${DOCKERHUB_PASSWORD} | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
       - name: Build
         run: |
           bash build_amd64.sh ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG} ${RELEASE_VERSION}
           docker save ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-amd64 --output "${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar"
-          mkdir -p dist
-          cp ${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar dist
+          mkdir -p dist_amd64
+          cp ${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar dist_amd64
           cowsay -f tux "Build Success"
       - uses: actions/upload-artifact@v3
         with:
-          name: dist
-          path: dist
+          name: dist_amd64
+          path: dist_amd64
       - name: Purge Job Cache
         run: |
           ls -la ${COMMON_CONTAINER_STAGING_PATH}
