--- a/.github/workflows/job-ci-buildamd64-global.yml
+++ b/.github/workflows/job-ci-buildamd64-global.yml
@@ -30,6 +30,10 @@ on:
         description: dockerhub
         required: true
         type: string
+      MONOREPO_BUSINESS_DOMAIN:
+        description: monorepo
+        required: false
+        type: string
 
 jobs:
   build_amd64:
@@ -45,6 +49,7 @@ jobs:
         DOCKERHUB_NAMESPACE: ${{ inputs.DOCKERHUB_NAMESPACE }}
         DOCKERHUB_USERNAME: ${{ secrets._DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets._DOCKERHUB_PASSWORD }}
+        MONOREPO_BUSINESS_DOMAIN: ${{ inputs.MONOREPO_BUSINESS_DOMAIN }}
       volumes:
         - /staging:/staging
     steps:
@@ -61,6 +66,7 @@ jobs:
         run: echo ${DOCKERHUB_PASSWORD} | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
       - name: Build
         run: |
+          cd ${MONOREPO_BUSINESS_DOMAIN}/${REPO_SLUG}
           bash build_amd64.sh ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG} ${RELEASE_VERSION}
           docker save ${DOCKERHUB_PRIVATE_NAMESPACE}/${REPO_SLUG}:${RELEASE_VERSION}-amd64 --output "${REPO_SLUG}-${RELEASE_VERSION}-amd64.tar"
           mkdir -p dist_amd64
