--- a/.github/workflows/core-ci-ecommerce-void.yml
+++ b/.github/workflows/core-ci-ecommerce-void.yml
@@ -22,12 +22,24 @@ env:
 #    working-directory: Core/xpipe-ecommerce
 
 jobs:
+  vars:
+    runs-on: ubuntu-latest
+    outputs:
+      BLUE: ${{ env.BLUE }}
+      YELLOW: ${{ env.YELLOW }}
+      RED: ${{ env.RED }}
+      NC: ${{ env.NC }}
+      REPO_SLUG: ${{ env.REPO_SLUG }}
+      RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
+      MONOREPO_BUSINESS_DOMAIN: ${{ env.MONOREPO_BUSINESS_DOMAIN }}
+    steps:
+      - run: echo "Exposing env vars"
   validate:
     uses: SindriaInc/XPipe/.github/workflows/job-no-validate-global.yml@master
     with:
       COMMON_CONTAINER_STAGING_PATH: ${{ vars.COMMON_CONTAINER_STAGING_PATH }}
-      REPO_SLUG: ${REPO_SLUG}
-      RELEASE_VERSION: ${RELEASE_VERSION}
+      REPO_SLUG: ${{ needs.vars.outputs.REPO_SLUG }}
+      RELEASE_VERSION: ${{ needs.vars.outputs.RELEASE_VERSION }}
   build_amd64:
     uses: SindriaInc/XPipe/.github/workflows/job-ci-buildamd64-global.yml@master
     needs: validate
@@ -36,13 +48,11 @@ jobs:
       _DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
     with:
       COMMON_CONTAINER_STAGING_PATH: ${{ vars.COMMON_CONTAINER_STAGING_PATH }}
-      #REPO_SLUG: ${{ vars.REPO_SLUG }}
-      REPO_SLUG: "xpipe-ecommerce"
-      #RELEASE_VERSION: ${{ vars.RELEASE_VERSION }}
-      RELEASE_VERSION: "1.0.2"
+      REPO_SLUG: ${{ needs.vars.outputs.REPO_SLUG }}
+      RELEASE_VERSION: ${{ needs.vars.outputs.RELEASE_VERSION }}
       DOCKERHUB_PRIVATE_NAMESPACE: ${{ vars.DOCKERHUB_PRIVATE_NAMESPACE }}
       DOCKERHUB_NAMESPACE: ${{ vars.DOCKERHUB_NAMESPACE }}
-      MONOREPO_BUSINESS_DOMAIN: "Core"
+      MONOREPO_BUSINESS_DOMAIN: ${{ needs.vars.outputs.MONOREPO_BUSINESS_DOMAIN }}
   build_arm64:
     uses: SindriaInc/XPipe/.github/workflows/job-ci-buildarm64-global.yml@master
     needs: validate
@@ -51,13 +61,11 @@ jobs:
       _DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
     with:
       COMMON_CONTAINER_STAGING_PATH: ${{ vars.COMMON_CONTAINER_STAGING_PATH }}
-      #REPO_SLUG: ${{ vars.REPO_SLUG }}
-      REPO_SLUG: "xpipe-ecommerce"
-      #RELEASE_VERSION: ${{ vars.RELEASE_VERSION }}
-      RELEASE_VERSION: "1.0.2"
+      REPO_SLUG: ${{ needs.vars.outputs.REPO_SLUG }}
+      RELEASE_VERSION: ${{ needs.vars.outputs.RELEASE_VERSION }}
       DOCKERHUB_PRIVATE_NAMESPACE: ${{ vars.DOCKERHUB_PRIVATE_NAMESPACE }}
       DOCKERHUB_NAMESPACE: ${{ vars.DOCKERHUB_NAMESPACE }}
-      MONOREPO_BUSINESS_DOMAIN: "Core"
+      MONOREPO_BUSINESS_DOMAIN: ${{ needs.vars.outputs.MONOREPO_BUSINESS_DOMAIN }}
 
 
 ###
